k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: blostemiq
  labels:
    name: blostemiq
    environment: dev
